# ufs-HTF-containers

./: .gitmodules  CMakeLists.txt  README.md
docker/: Dockerfile  Dockerfile.ccpp-scm  Dockerfile.ufs-wm  README.md
docker/test_C96_Barry/: run_case
tests/: CMakeLists.txt  multirun_twpice_supported_suites.py
tests/comp/: scm_analysis.py  twpice_comp.ini
